Fix cards gap

--- a/src/app/components/dynamics/app-cards/app-card-hero/app-card-hero.component.scss
+++ b/src/app/components/dynamics/app-cards/app-card-hero/app-card-hero.component.scss
@@ -2,15 +2,14 @@
 
 .c-card-hero {
   width: 318px;
-  height: auto;
   box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.1);
 
-  &__img {
+  &__img-container {
     width: 100%;
     height: 238px;
   }
 
-  &__img-item {
+  &__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
