--- a/src/app/sections/section-cards/section-cards.component.scss
+++ b/src/app/sections/section-cards/section-cards.component.scss
@@ -1,6 +1,7 @@
 .s-list-hero {
   &__cards {
     width: 100%;
+    gap: 24px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(318px, 1fr));
     justify-items: center;
